[package]
name = "workworm"
version = "0.1.0"
authors = ["rap6572@gmail.com" ] 
edition = "2021"

[lib]
crate-type = ["cdylib"]

# Dependencies
[dependencies]
solana-program = "2.0.11"
borsh = "0.10" 
solana-sdk = "2.0.11" 
bincode = "1.3.3" 
serde = { version = "1.0", features = ["derive"] } 
thiserror = "1.0" 
wormhole = { git = "https://github.com/wormhole-foundation/wormhole.git" }
tokio = { version = "1", features = ["full"] } 
crossbeam = "0.8" 
log = "0.4" 
env_logger = "0.11.5" 

[dev-dependencies]
solana-sdk = "2.0.11" 

[features]
default = ["std"]
std = [] 
